k8s/bookmarket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmarket-service
spec:
  selector:
    app: bookmarket
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
