k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bookmarket.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookmarket-service
                port:
                  number: 8080
    - host: imagestore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imagestore-service
                port:
                  number: 8081
    - host: frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
